--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,5 @@
 {% load static from staticfiles %}
 <!DOCTYPE html>
-<!--
-This is a starter template page. Use this page to start your new project from
-scratch. This page gets rid of all links and provides the needed markup only.
--->
 <html>
   <head>
     <meta charset="UTF-8">
@@ -12,16 +8,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.4 -->
     <link href="{% static "css/vendor/bootstrap.min.css"%}" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Ionicons -->
-    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css" />
+
     <!-- Theme style -->
+
     <link href="{% static "css/vendor/AdminLTE.min.css"%}" rel="stylesheet" type="text/css" />
-    <!-- AdminLTE Skins. We have chosen the skin-blue for this starter
-          page. However, you can choose any other skin. Make sure you
-          apply the skin class to the body tag so the changes take effect.
-    -->
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -29,37 +19,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <link href="{% static "css/base.css"%}" rel="stylesheet">
 
-    <script type="text/javascript" src="{% static "js/vendor/bootstraptre.min.js"%}"></script>
-
     <link href="{% static "css/vendor/skins/skin-blue.min.css"%}" rel="stylesheet" type="text/css" />
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
-  <!--
-  BODY TAG OPTIONS:
-  =================
-  Apply one or more of the following classes to get the
-  desired effect
-  |---------------------------------------------------------|
-  | SKINS         | skin-blue                               |
-  |               | skin-black                              |
-  |               | skin-purple                             |
-  |               | skin-yellow                             |
-  |               | skin-red                                |
-  |               | skin-green                              |
-  |---------------------------------------------------------|
-  |LAYOUT OPTIONS | fixed                                   |
-  |               | layout-boxed                            |
-  |               | layout-top-nav                          |
-  |               | sidebar-collapse                        |
-  |               | sidebar-mini                            |
-  |---------------------------------------------------------|
-  -->
+
   <body class="skin-blue sidebar-mini">
     <div class="wrapper">
 
@@ -69,7 +31,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <!-- Logo -->
         <a href="index2.html" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>A</b>LT</span>
+          <span class="logo-mini"><b>A</b>PPB</span>
           <!-- logo for regular state and mobile devices -->
           <span class="logo-lg"><b>Admin</b></span>
         </a>
@@ -78,6 +40,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         <nav class="navbar navbar-static-top" role="navigation">
           <!-- Sidebar toggle button-->
           <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+            <span class="glyphicon glyphicon-menu-hamburger"></span>
             <span class="sr-only">Toggle navigation</span>
           </a>
           <!-- Navbar Right Menu -->
@@ -169,14 +132,14 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <!-- The user image in the navbar-->
                   <img src="{% static "img/user2-160x160.jpg"%}" class="user-image" alt="User Image"/>
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                  <span class="hidden-xs">Bryan Barrezueta</span>
+                  <span class="hidden-xs">Usuario 1</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
                   <li class="user-header">
                     <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image" />
                     <p>
-                      Bryan Barrezueta - Web Developer
+                      User1 - Web Developer
                     </p>
                   </li>
                   <!-- Menu Body -->
@@ -193,7 +156,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </li>
               <!-- Control Sidebar Toggle Button -->
               <li>
-                <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+                <a href="#" data-toggle="control-sidebar"><i class="glyphicon glyphicon-cog"></i></a>
               </li>
             </ul>
           </div>
@@ -211,9 +174,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
               <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image" />
             </div>
             <div class="pull-left info">
-              <p>Bryan Barrezueta</p>
+              <p>Usuario 1</p>
               <!-- Status -->
-              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+              <a href="#"><i class="glyphicon glyphicon-ok-sign text-success"></i> Online</a>
             </div>
           </div>
 
@@ -222,22 +185,23 @@ scratch. This page gets rid of all links and provides the needed markup only.
             <div class="input-group">
               <input type="text" name="q" class="form-control" placeholder="Search..."/>
               <span class="input-group-btn">
-                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i></button>
+                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="glyphicon glyphicon-search"></i></button>
               </span>
             </div>
           </form>
           <!-- /.search form -->
-
+          {% block sidebar %}
           <!-- Sidebar Menu -->
           <ul class="sidebar-menu">
             <li class="header">Control</li>
             <!-- Optionally, you can add icons to the links -->
-            <li><a href="index.html"><i class='fa fa-link'></i> <span>Inicio</span></a></li>
-            <li class="active"><a href="#"><i class='fa fa-link'></i><span>Registros</span></a></li>
-            <li><a href="#"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
+            <li class="active"><a href="{ url 'base'}"><i class='fa fa-link'></i> <span>Inicio</span></a></li>
+            <li><a href="#"><i class='fa fa-link'></i><span>Registros</span></a></li>
+            <li><a href="{% url 'permiso' %}"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
             <li><a href="#"><i class='fa fa-link'></i> <span>Vacaciones</span></a></li>
-
+            <li><a href="{% url 'config' %}"><i class='fa fa-link'></i> <span>Configuracion</span></a></li>
           </ul><!-- /.sidebar-menu -->
+          {% endblock %}
         </section>
         <!-- /.sidebar -->
       </aside>
@@ -327,14 +291,10 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{% static "js/vendor/jquery-2.1.4.min.js"%}"></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="{% static "js/vendor/bootstrap.min.js"%}" type="text/javascript"></script>
+
+    <!--<script type="text/javascript" src="{% static "js/vendor/bootstraptre.min.js"%}"></script>-->
+
     <!-- AdminLTE App -->
     <script src="{% static "js/app.min.js"%}" type="text/javascript"></script>
-
-    <!-- Optionally, you can add Slimscroll and FastClick plugins.
-          Both of these plugins are recommended to enhance the
-          user experience. Slimscroll is required when using the
-          fixed layout. -->
   </body>
-</html>
-
 </html>
