Working on login

--- a/templates/permiso.html
+++ b/templates/permiso.html
@@ -5,7 +5,7 @@
 	<li class="header">Control</li>
 	<li><a href="{% url 'base' %}"><i class='fa fa-link'></i> <span>Inicio</span></a></li>
 	<li><a href="#"><i class='fa fa-link'></i><span>Registros</span></a></li>
-	<li class="active"><a href="#"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
+	<li class="active"><a href="{% url 'permiso' %}"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
 	<li><a href="#"><i class='fa fa-link'></i> <span>Vacaciones</span></a></li>
 	<li><a href="{% url 'config' %}"><i class='fa fa-link'></i> <span>Configuracion</span></a></li>
  </ul>
@@ -19,6 +19,7 @@
 				<br>
 				<button class="btn btn-success" type="input">Aceptar</button>
 			</form>
+			{{form.errors}}
 		</div>
 	</div>
 {% endblock %}
