--- a/templates/base.html
+++ b/templates/base.html
@@ -3,33 +3,34 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Base</title>
+    <title>SIMCOPV</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.4 -->
-    <link href="{% static "css/vendor/bootstrap.min.css"%}" rel="stylesheet" type="text/css" />
+    <link href="{% static "bootstrap/css/bootstrap.min.css"%}" rel="stylesheet" type="text/css" />
 
     <!-- Theme style -->
-
     <link href="{% static "css/vendor/AdminLTE.min.css"%}" rel="stylesheet" type="text/css" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <link href="{% static "css/vendor/bootstraptre.min.css"%}" rel="stylesheet">
-
-    <link href="{% static "css/base.css"%}" rel="stylesheet">
 
     <link href="{% static "css/vendor/skins/skin-blue.min.css"%}" rel="stylesheet" type="text/css" />
   </head>
 
   <body class="skin-blue sidebar-mini">
+    <style>
+      li.user-header > a{
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+    </style>
     <div class="wrapper">
 
       <!-- Main Header -->
       <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="{% url 'base' %}" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>A</b>PPB</span>
           <!-- logo for regular state and mobile devices -->
@@ -46,85 +47,6 @@
           <!-- Navbar Right Menu -->
           <div class="navbar-custom-menu">
             <ul class="nav navbar-nav">
-              <!-- Messages: style can be found in dropdown.less-->
-              <li class="dropdown messages-menu">
-                <!-- Menu toggle button -->
-                <ul class="dropdown-menu">
-                  <li>
-                    <!-- inner menu: contains the messages -->
-                    <ul class="menu">
-                      <li><!-- start message -->
-                        <a href="#">
-                          <div class="pull-left">
-                            <!-- User Image -->
-                            <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image"/>
-                          </div>
-                          <!-- Message title and timestamp -->
-                          <h4>
-                            Support Team
-                            <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                          </h4>
-                          <!-- The message -->
-                          <p>Why not buy a new awesome theme?</p>
-                        </a>
-                      </li><!-- end message -->
-                    </ul><!-- /.menu -->
-                  </li>
-                  <li class="footer"><a href="#">See All Messages</a></li>
-                </ul>
-              </li><!-- /.messages-menu -->
-
-              <!-- Notifications Menu -->
-              <li class="dropdown notifications-menu">
-                <!-- Menu toggle button -->
-              
-                <ul class="dropdown-menu">
-                  
-                  <li>
-                    <!-- Inner Menu: contains the notifications -->
-                    <ul class="menu">
-                      <li><!-- start notification -->
-                        <a href="#">
-                          <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                        </a>
-                      </li><!-- end notification -->
-                    </ul>
-                  </li>
-                  <li class="footer"><a href="#">View all</a></li>
-                </ul>
-              </li>
-              <!-- Tasks Menu -->
-              <li class="dropdown tasks-menu">
-                <!-- Menu Toggle Button -->
-               
-                <ul class="dropdown-menu">
-                  
-                  <li>
-                    <!-- Inner menu: contains the tasks -->
-                    <ul class="menu">
-                      <li><!-- Task item -->
-                        <a href="#">
-                          <!-- Task title and progress text -->
-                          <h3>
-                            Design some buttons
-                            <small class="pull-right">20%</small>
-                          </h3>
-                          <!-- The progress bar -->
-                          <div class="progress xs">
-                            <!-- Change the css width attribute to simulate progress -->
-                            <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                              <span class="sr-only">20% Complete</span>
-                            </div>
-                          </div>
-                        </a>
-                      </li><!-- end task item -->
-                    </ul>
-                  </li>
-                  <li class="footer">
-                    <a href="#">View all tasks</a>
-                  </li>
-                </ul>
-              </li>
               <!-- User Account Menu -->
               <li class="dropdown user user-menu">
                 <!-- Menu Toggle Button -->
@@ -132,14 +54,14 @@
                   <!-- The user image in the navbar-->
                   <img src="{% static "img/user2-160x160.jpg"%}" class="user-image" alt="User Image"/>
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                  <span class="hidden-xs">Usuario 1</span>
+                  <span class="hidden-xs">{{usuario}}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
                   <li class="user-header">
                     <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image" />
                     <p>
-                      User1 - Web Developer
+                      {{usuario}}
                     </p>
                   </li>
                   <!-- Menu Body -->
@@ -149,7 +71,7 @@
                   <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-right">
-                      <a href="#" class="btn btn-default btn-flat">Salir</a>
+                      <a href="{% url 'logout' %}" class="btn btn-default btn-flat">Salir</a>
                     </div>
                   </li>
                 </ul>
@@ -174,7 +96,7 @@
               <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image" />
             </div>
             <div class="pull-left info">
-              <p>Usuario 1</p>
+              <p>{{usuario}}</p>
               <!-- Status -->
               <a href="#"><i class="glyphicon glyphicon-ok-sign text-success"></i> Online</a>
             </div>
@@ -290,10 +212,7 @@
     <!-- jQuery 2.1.4 -->
     <script src="{% static "js/vendor/jquery-2.1.4.min.js"%}"></script>
     <!-- Bootstrap 3.3.2 JS -->
-    <script src="{% static "js/vendor/bootstrap.min.js"%}" type="text/javascript"></script>
-
-    <!--<script type="text/javascript" src="{% static "js/vendor/bootstraptre.min.js"%}"></script>-->
-
+    <script src="{% static "bootstrap/js/bootstrap.min.js"%}" type="text/javascript"></script>
     <!-- AdminLTE App -->
     <script src="{% static "js/app.min.js"%}" type="text/javascript"></script>
   </body>
