--- a/templates/configuracion.html
+++ b/templates/configuracion.html
@@ -5,7 +5,7 @@
     <li class="header">Control</li>
     <li><a href="{% url 'base' %}"><i class='fa fa-link'></i> <span>Inicio</span></a></li>
     <li><a href="#"><i class='fa fa-link'></i><span>Registros</span></a></li>
-    <li><a href="#"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
+    <li><a href="{% url 'permiso' %}"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
     <li><a href="#"><i class='fa fa-link'></i> <span>Vacaciones</span></a></li>
     <li class="active"><a href="{% url 'config' %}"><i class='fa fa-link'></i> <span>Configuracion</span></a></li>
   </ul>
