--- a/templates/index.html
+++ b/templates/index.html
@@ -11,27 +11,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<title>Portal de Gestion de Permisos y Vacaciones</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="keywords" content="Play-Offs Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
 		<script type="application/x-javascript"> addEventListener("load", function() {setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-		<!--meta charset utf="8"-->
-		<!--fonts-->
-			<link href='http://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
-			<link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
-		<!--fonts-->
+		<!--<meta charset="utf-8">-->
 		<!--owlcss-->
 		<link href="{% static "css/owl.carousel.css"%}" rel="stylesheet">
 		<!--bootstrap-->
-			<link href="{% static "css/vendor/bootstrap.min.css"%}" rel="stylesheet" type="text/css">
-		<!--coustom css-->
-			<link href="{% static "css/index.css"%}" rel="stylesheet" type="text/css"/>
-		<!--default-js-->
-			<script src="{% static "js/vendor/jquery-2.1.4.min.js"%}"></script>
-		<!--bootstrap-js-->
-			<script src="{% static "js/vendor/bootstrap.min.js"%}"></script>
-		<!--script-->
-			<script type="text/javascript" src="{% static "js/move-top.js"%}"></script>
-			<script type="text/javascript" src="{% static "js/easing.js"%}"></script>
-		<!--script-->
+		<link href="{% static "bootstrap/css/bootstrap.min.css"%}" rel="stylesheet" type="text/css">
+		<!--custom css-->
+		<link href="{% static "css/index.css"%}" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
 		<div class="header" id="home">
@@ -40,61 +27,33 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="true">
 					<span class="sr-only">Menu</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand logo-st" href="index.html">APPB</a>
+					<a class="navbar-brand logo-st" href="{% url 'index' %}">SIMCOPV</a>
 					</div>
 					<!-- Collect the nav links, forms, and other content for toggling -->
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<div class="collapse navbar-collapse" id="navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
+						{% if usuario.is_authenticated %}
 						<li>
-						<a href="#home" class="scroll">
-						<span class="glyphicon glyphicon-home icn_pos hm" aria-hidden="true"></span><br>
-						Registro
+						<a href="{% url 'base' %}">
+						<span class="glyphicon glyphicon-home icn_pos hm1" aria-hidden="true"></span><br>
+						{{usuario}}
 						</a>
 						</li>
-						<!---->
+						{% else %}
 						<li>
-						<a href="#features" class="scroll">
-						<span class="glyphicon glyphicon-cog icn_pos" aria-hidden="true"></span><br>
-						Permisos
-						</a>
-						</li>
-						<!---->
-						<li>
-						<a href="#doc" class="scroll">
-						<span class="glyphicon glyphicon-briefcase icn_pos" aria-hidden="true"></span><br>
-						Vacaciones
-						</a>
-						</li>
-						<!---->
-						<li>
-						<a href="#acheive" class="scroll">
-						<span class="glyphicon glyphicon-thumbs-up icn_pos hm2" aria-hidden="true"></span><br>
+						<a href="{% url 'auth' %}">
+						<span class="glyphicon glyphicon-home icn_pos hm1" aria-hidden="true"></span><br>
 						Login
 						</a>
 						</li>
+						{% endif %}
 						<!---->
-						<li>	
-						<a href="#contact" class="scroll">
-						<span class="glyphicon glyphicon-envelope icn_pos" aria-hidden="true"></span><br>
-						Sign Up
-						</a>
-						</li>
-						<!--script-->
-						<script type="text/javascript">
-						jQuery(document).ready(function($) {
-						$(".scroll").click(function(event){		
-						event.preventDefault();
-						$('html,body').animate({scrollTop:$(this.hash).offset().top},900);
-						});
-						});
-						</script>
-						<!--script-->
 					</ul>
 					</div><!-- /.navbar-collapse -->
 					<div class="clearfix"></div>
@@ -146,10 +105,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="footer">
 			<div class="container">
 				<div class="footer-text">
-				<h3><a href="index.html">Autoridad Portuaria de Puerto Bolivar</a></h3>
+				<h3><a href="index.html">APPB - Autoridad Portuaria de Puerto Bolívar</a></h3>
 				</div>
 			</div>
 		</div>
 		<a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+		<!--default-js-->
+		<script src="{% static "js/vendor/jquery-2.1.4.min.js"%}"></script>
+		<!--bootstrap-js-->
+			<script src="{% static "bootstrap/js/bootstrap.min.js"%}"></script>
+		<!--script-->
+			<script type="text/javascript" src="{% static "js/move-top.js"%}"></script>
+			<script type="text/javascript" src="{% static "js/easing.js"%}"></script>
+		<!--script-->
 	</body>
 </html>
