--- a/templates/base.html
+++ b/templates/base.html
@@ -3,20 +3,24 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>SIMCOPV</title>
+    <title>
+    {% block title %}
+      SIMCOPV Admin
+    {% endblock title %}
+    </title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    {% block css %}
     <!-- Bootstrap 3.3.4 -->
     <link href="{% static "bootstrap/css/bootstrap.min.css"%}" rel="stylesheet" type="text/css" />
-
     <!-- Theme style -->
     <link href="{% static "css/vendor/AdminLTE.min.css"%}" rel="stylesheet" type="text/css" />
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <link href="{% static "css/vendor/skins/skin-blue.min.css"%}" rel="stylesheet" type="text/css" />
-  </head>
+    {% endblock css %}
 
+  </head>
   <body class="skin-blue sidebar-mini">
     <style>
       li.user-header > a{
@@ -208,12 +212,13 @@
     </div><!-- ./wrapper -->
 
     <!-- REQUIRED JS SCRIPTS -->
-
+    {% block javascript %}
     <!-- jQuery 2.1.4 -->
     <script src="{% static "js/vendor/jquery-2.1.4.min.js"%}"></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="{% static "bootstrap/js/bootstrap.min.js"%}" type="text/javascript"></script>
     <!-- AdminLTE App -->
     <script src="{% static "js/app.min.js"%}" type="text/javascript"></script>
+    {% endblock javascript %}
   </body>
 </html>
