--- a/templates/usuarios/configuracion.html
+++ b/templates/usuarios/configuracion.html
@@ -13,11 +13,11 @@
 {% block content %}
 	<div class="row">
 		<div class="col-xs-12">
-			<form action="" method="post" class="form" role="form">
+			<form action="" enctype="multipart/form-data" method="post" class="form" role="form">
 				{% csrf_token %}
 				{{form}}
 				<br>
-				<button class="btn btn-success" type="input">Aceptar</button>
+				<button class="btn btn-info" type="input">Aceptar</button>
 			</form>
 		</div>
 	</div>
