--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,10 @@
         margin-bottom: 0;
         padding-bottom: 0;
       }
+      div#sid{
+        margin: 0;
+        padding: 0;
+      }
     </style>
     <div class="wrapper">
 
@@ -118,15 +122,27 @@
           <!-- /.search form -->
           {% block sidebar %}
           <!-- Sidebar Menu -->
-          <ul class="sidebar-menu">
+          <div id="sid" class="sidebar-nav navbar-collapse">
+          <ul class="sidebar-menu nav" id="side-menu">
             <li class="header">Control</li>
             <!-- Optionally, you can add icons to the links -->
-            <li class="active"><a href="{ url 'base'}"><i class='fa fa-link'></i> <span>Inicio</span></a></li>
-            <li><a href="#"><i class='fa fa-link'></i><span>Registros</span></a></li>
-            <li><a href="{% url 'permiso' %}"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
-            <li><a href="#"><i class='fa fa-link'></i> <span>Vacaciones</span></a></li>
-            <li><a href="{% url 'config' %}"><i class='fa fa-link'></i> <span>Configuracion</span></a></li>
+            <li class="active">
+              <a href="{% url 'base' %}"><i class='glyphicon glyphicon-dashboard'></i> <span>Inicio</span></a>
+            </li>
+            <li>
+              <a href="#"><i class='glyphicon glyphicon-book'></i><span>Registrar</span>
+              <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
+                <li><a href="{% url 'agregarperiodo' %}">Periodo</a></li>
+              </ul>
+            </li>
+            <li><a href="{% url 'permiso' %}"><i class='glyphicon glyphicon-user'></i> <span>Permisos</span></a></li>
+            <li><a href="#"><i class='glyphicon glyphicon-pencil'></i> <span>Vacaciones</span></a></li>
+            <li><a href="{% url 'config' %}"><i class='glyphicon glyphicon-cog'></i> <span>Configuracion</span></a></li>
           </ul><!-- /.sidebar-menu -->
+          </div>
           {% endblock %}
         </section>
         <!-- /.sidebar -->
@@ -146,7 +162,6 @@
       </div><!-- /.content-wrapper -->
 
      
-      
       <!-- Control Sidebar -->      
       <aside class="control-sidebar control-sidebar-dark">                
         <!-- Create the tabs -->
@@ -219,6 +234,8 @@
     <script src="{% static "bootstrap/js/bootstrap.min.js"%}" type="text/javascript"></script>
     <!-- AdminLTE App -->
     <script src="{% static "js/app.min.js"%}" type="text/javascript"></script>
+    <script src="{% static "js/vendor/metisMenu.min.js"%}"></script>
+    <script src="{% static "js/admin.js"%}"></script>
     {% endblock javascript %}
   </body>
 </html>
