--- a/templates/usuarios/agregarusuario.html
+++ b/templates/usuarios/agregarusuario.html
@@ -1,5 +1,29 @@
 {% extends "base.html" %}
+{% block sidebar %}
+<div id="sid" class="sidebar-nav navbar-collapse">
+  <ul class="sidebar-menu nav" id="side-menu">
+    <li class="header">Control</li>
+    <li>
+      <a href="{% url 'base' %}"><i class='glyphicon glyphicon-dashboard'></i> <span>Inicio</span></a>
+    </li>
+    <li>
+      <a href="#"><i class='glyphicon glyphicon-book'></i><span>Registrar</span>
+      <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
+      </a>
+
+      <ul class="nav nav-second-level">
+        <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
+        <li><a href="{% url 'agregarperiodo' %}">Periodo</a></li>
+      </ul>
+    </li>
+    <li><a href="{% url 'permiso' %}"><i class='glyphicon glyphicon-user'></i> <span>Permisos</span></a></li>
+    <li><a href="#"><i class='glyphicon glyphicon-pencil'></i> <span>Vacaciones</span></a></li>
+    <li><a href="{% url 'config' %}"><i class='glyphicon glyphicon-cog'></i> <span>Configuracion</span></a></li>
+  </ul>
+ </div>
+{% endblock %}
 {% block content %}
+	<h3 class="text-center">Agregar Usuario</h3>
 	<form action="" method="post" class="form" role="form">
 		{% csrf_token %}
 		{{form}}
@@ -9,7 +33,7 @@
 	</form>
 	<br>
 	{% if men %}
-		<div class="alert alert-warning">
+		<div class="alert alert-sucess">
 			<button class="close" data-dismiss="alert"><span>&times;</span></button>
 			<strong>Alerta!</strong> {{men}}
 		</div>
