--- a/templates/usuarios/configuracion.html
+++ b/templates/usuarios/configuracion.html
@@ -1,24 +1,51 @@
 {% extends "base.html" %} 
 {% load static from staticfiles %}
 {% block sidebar %}
-  <ul class="sidebar-menu">
+  <div id="sid" class="sidebar-nav navbar-collapse">
+  <ul class="sidebar-menu nav" id="side-menu">
     <li class="header">Control</li>
-    <li><a href="{% url 'base' %}"><i class='fa fa-link'></i> <span>Inicio</span></a></li>
-    <li><a href="#"><i class='fa fa-link'></i><span>Registros</span></a></li>
-    <li><a href="{% url 'permiso' %}"><i class='fa fa-link'></i> <span>Permisos</span></a></li>
-    <li><a href="#"><i class='fa fa-link'></i> <span>Vacaciones</span></a></li>
-    <li class="active"><a href="{% url 'config' %}"><i class='fa fa-link'></i> <span>Configuracion</span></a></li>
-  </ul>
+    <!-- Optionally, you can add icons to the links -->
+    <li>
+      <a href="{% url 'base' %}"><i class='glyphicon glyphicon-dashboard'></i> <span>Inicio</span></a>
+    </li>
+    <li>
+      <a href="#"><i class='glyphicon glyphicon-book'></i><span>Registrar</span>
+      <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
+      </a>
+      <ul class="nav nav-second-level">
+        <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
+        <li><a href="{% url 'agregarperiodo' %}">Periodo</a></li>
+      </ul>
+    </li>
+    <li><a href="{% url 'permiso' %}"><i class='glyphicon glyphicon-user'></i> <span>Permisos</span></a></li>
+    <li><a href="#"><i class='glyphicon glyphicon-pencil'></i> <span>Vacaciones</span></a></li>
+    <li class="active"><a href="{% url 'config' %}"><i class='glyphicon glyphicon-cog'></i> <span>Configuracion</span></a></li>
+  </ul><!-- /.sidebar-menu -->
+  </div>
 {% endblock %}
 {% block content %}
 	<div class="row">
 		<div class="col-xs-12">
+      <h3 class="text-center">Imagenes de la Página Principal</h3>
 			<form action="" enctype="multipart/form-data" method="post" class="form" role="form">
 				{% csrf_token %}
 				{{form}}
 				<br>
-				<button class="btn btn-info" type="input">Aceptar</button>
+				<button class="btn btn-info" type="input">Actualizar</button>
 			</form>
 		</div>
 	</div>
+  <br>
+  {% if men %}
+  <div class="alert alert-info">
+    <button class="close" data-dismiss="alert"><span>&times;</span></button>
+    <strong>Alerta!</strong> {{men}}
+  </div>  
+  {% endif %}
+  {% if success %}
+  <div class="alert alert-success">
+    <button class="close" data-dismiss="alert"><span>&times;</span></button>
+    <strong>Correcto!</strong> {{success}}
+  </div>  
+  {% endif %}
 {% endblock %}
