--- a/templates/login.html
+++ b/templates/login.html
@@ -8,30 +8,48 @@
 </head>
 <body>
 	<div class="container">
+		<br>
+		<div class="row hidden-sm hidden-xs">
+			<br>
+			<br>
+			<br class="visible-lg">
+			<br class="visible-lg">
+			<br class="visible-lg">
+			<br>
+			<br>
+		</div>
 		<div class="row">
-			<div class="col-xs-12">
-				<br>
-				{% if men %}
-				<div class="alert alert-warning">
-					<button class="close" data-dismiss="alert"><span>&times;</span></button>
-					<strong>Alerta!</strong> {{men}}
-				</div>	
-				{% endif %}
-				<form action="" method="post" class="form" role="form">
-					{% csrf_token %}
-					<div class="form-group">
-						<label for="id_{{form.usuario.name}}">Usuario:</label>
-						{{form.usuario}}	
+			<div class="col-md-3 hidden-xs hidden-sm">
+			</div>
+			<div class="col-xs-12 col-md-6">
+				<div class="panel panel-default">
+					<div class="panel-body">
+						<h3 class="text-center">SIMCOPV Login</h3>
+						{% if men %}
+						<div class="alert alert-warning">
+							<button class="close" data-dismiss="alert"><span>&times;</span></button>
+							<strong>Alerta!</strong> {{men}}
+						</div>	
+						{% endif %}
+						<form action="" method="post" class="form" role="form">
+							{% csrf_token %}
+							<div class="form-group">
+								<label for="id_{{form.usuario.name}}">Usuario:</label>
+								{{form.usuario}}	
+							</div>
+							<div class="form-group">
+								<label for="id_{{form.password.name}}">Password:</label>
+								{{form.password}}
+							</div>
+							<div class="form-group">
+								<button class="btn btn-default" type="submit">Iniciar Sesión</button>
+							</div>
+						</form>
+						{{form.errors}}
 					</div>
-					<div class="form-group">
-						<label for="id_{{form.password.name}}">Password:</label>
-						{{form.password}}
-					</div>
-					<div class="form-group">
-						<button class="btn btn-default" type="submit">Iniciar Sesión</button>
-					</div>
-				</form>
-				{{form.errors}}
+				</div>		
+			</div>
+			<div class="col-md-3 hidden-xs hidden-sm">
 			</div>
 		</div>
 	</div>
