--- a/templates/usuarios/agregarusuario.html
+++ b/templates/usuarios/agregarusuario.html
@@ -29,7 +29,7 @@
 			<div class="panel panel-default">
 				<div class="panel-body">
 					<h3 class="text-center">Agregar Usuario</h3>
-					<form action="" method="post" class="form" role="form">
+					<form action="" method="post" enctype="multipart/form-data" class="form" role="form">
 						{% csrf_token %}
 						{{form}}
 						<br>	
@@ -44,9 +44,17 @@
 	</div>
 	<br>
 	{% if men %}
-		<div class="alert alert-sucess">
+		<div class="alert alert-info">
 			<button class="close" data-dismiss="alert"><span>&times;</span></button>
 			<strong>Alerta!</strong> {{men}}
+		</div>
+	{% endif %}
+	{% if messages %}
+		<div class="alert alert-success messages">
+			<button class="close" data-dismiss="alert"><span>&times;</span></button>
+			{% for message in messages %}
+				<strong>Alerta!</strong> {{message}}	
+			{% endfor %}
 		</div>
 	{% endif %}
 	<div class="modal fade" id="modal-unidad-agregar">
