--- a/templates/base.html
+++ b/templates/base.html
@@ -60,14 +60,14 @@
                 <!-- Menu Toggle Button -->
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                   <!-- The user image in the navbar-->
-                  <img src="{% static "img/user2-160x160.jpg"%}" class="user-image" alt="User Image"/>
+                  <img src="{{usuario.persona.foto.url}}" class="user-image" alt="User Image"/>
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                  <span class="hidden-xs">{{usuario}}</span>
+                  <span class="hidden-xs">{{usuario.first_name}} {{usuario.last_name}}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
                   <li class="user-header">
-                    <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image" />
+                    <img src="{{usuario.persona.foto.url}}" class="img-circle" alt="User Image" />
                     <p>
                       {{usuario}}
                     </p>
@@ -101,10 +101,10 @@
           <!-- Sidebar user panel (optional) -->
           <div class="user-panel">
             <div class="pull-left image">
-              <img src="{% static "img/user2-160x160.jpg"%}" class="img-circle" alt="User Image" />
+              <img src="{{usuario.persona.foto.url}}" class="img-circle" alt="User Image" />
             </div>
             <div class="pull-left info">
-              <p>{{usuario}}</p>
+              <p>{{usuario.first_name}} {{usuario.last_name}}</p>
               <!-- Status -->
               <a href="#"><i class="glyphicon glyphicon-ok-sign text-success"></i> Online</a>
             </div>
