--- a/templates/usuarios/agregarusuario.html
+++ b/templates/usuarios/agregarusuario.html
@@ -22,6 +22,23 @@
  </div>
 {% endblock %}
 {% block content %}
+	{% if messages %}
+			{% for message in messages %}
+			{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+			<div class="alert alert-danger">	
+			{% endif %}
+			{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+			<div class="alert alert-success">	
+			{% endif %}
+			{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+			<div class="alert alert-warning">	
+			{% endif %}
+			<button class="close" data-dismiss="alert"><span>&times;</span></button>
+				<strong>Alerta!</strong> {{message}}	
+			</div>
+			{% endfor %}
+	{% endif %}
+	<br>
 	<div class="row">
 		<div class="col-sm-3 hidden-xs hidden-sm">
 		</div>
@@ -42,21 +59,6 @@
 		<div class="col-sm-3 hidden-xs hidden-sm">
 		</div>
 	</div>
-	<br>
-	{% if men %}
-		<div class="alert alert-info">
-			<button class="close" data-dismiss="alert"><span>&times;</span></button>
-			<strong>Alerta!</strong> {{men}}
-		</div>
-	{% endif %}
-	{% if messages %}
-		<div class="alert alert-success messages">
-			<button class="close" data-dismiss="alert"><span>&times;</span></button>
-			{% for message in messages %}
-				<strong>Alerta!</strong> {{message}}	
-			{% endfor %}
-		</div>
-	{% endif %}
 	<div class="modal fade" id="modal-unidad-agregar">
 		<div class="modal-dialog">
 			<div class="modal-content">
