--- a/templates/permisos/permiso.html
+++ b/templates/permisos/permiso.html
@@ -14,6 +14,7 @@
       </a>
       <ul class="nav nav-second-level">
         <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
+        <li><a href="{% url 'asignarroles' %}">Roles</a></li>
         <li><a href="{% url 'agregarperiodo' %}">Periodo</a></li>
       </ul>
     </li>
