--- a/templates/usuarios/agregarusuario.html
+++ b/templates/usuarios/agregarusuario.html
@@ -6,13 +6,14 @@
     <li>
       <a href="{% url 'base' %}"><i class='glyphicon glyphicon-dashboard'></i> <span>Inicio</span></a>
     </li>
-    <li>
+    <li class="active">
       <a href="#"><i class='glyphicon glyphicon-book'></i><span>Registrar</span>
       <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
       </a>
       <ul class="nav nav-second-level">
         <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
-        <li><a href="{% url 'agregarperiodo' %}">Periodo</a></li>
+        <li><a href="{% url 'asignarroles' %}">Roles</a></li>
+        <li><a href="{% url 'agregarperiodo' %}">Periodos</a></li>
       </ul>
     </li>
     <li><a href="{% url 'permiso' %}"><i class='glyphicon glyphicon-user'></i> <span>Permisos</span></a></li>
