Fixing asignar roles seccion

--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li>
 						<a href="{% url 'base' %}">
 						<i class="glyphicon glyphicon-home icn_pos hm1" aria-hidden="true"></i><br>
-						{{usuario}}
+						<span>{{usuario}}</span>
 						</a>
 						</li>
 						{% else %}
